# antigen

./: README.md  antigen.py  pyproject.toml
antigen/: __init__.py  __main__.py  sentence.py
