[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anti"
version = "0.1.0"
description = "A Tatoeba sentence to CSV generator for Anki"
authors = [
    {name = "Baba", email = "bms110403@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/bx-sa1/anti"
